--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "core-js": "^3.6.2",
     "material-design-icons-iconfont": "^6.1.0",
+    "moment": "^2.24.0",
     "v-jsoneditor": "^1.4.2",
     "vue": "^2.6.11",
     "vue-i18n": "^8.15.3",
