--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
   },
   "dependencies": {
     "autoprefixer": "^9.8.0",
+    "bootstrap": "^4.6.0",
+    "bootstrap-vue": "^2.21.2",
     "colorette": "^1.2.0",
     "core-js": "^3.6.2",
     "d3": "^6.3.1",
     "material-design-icons-iconfont": "^6.1.0",
     "moment": "^2.24.0",
+    "portal-vue": "^2.1.7",
     "react-scripts": "^3.4.1",
     "v-jsoneditor": "^1.4.2",
     "vue": "^2.6.11",
