--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "vue-cli-service serve --open",
-    "cloud": "vue-cli-service serve --mode cloud",
+    "cloud": "vue-cli-service serve --mode cloud --host 0.0.0.0",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
