--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "colorette": "^1.2.0",
     "core-js": "^3.6.2",
     "d3": "^6.3.1",
+    "downloadjs": "^1.4.7",
     "material-design-icons-iconfont": "^6.1.0",
     "moment": "^2.24.0",
     "portal-vue": "^2.1.7",
