--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-scripts": "^3.4.1",
     "v-jsoneditor": "^1.4.2",
     "vue": "^2.6.11",
+    "vue-google-charts": "^0.3.3",
     "vue-i18n": "^8.15.3",
     "vue-router": "^3.1.3",
     "vuetify": "^2.2.11",
