--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "cloud": "vue-cli-service serve --mode cloud --host 0.0.0.0",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
+    "cloudbuild": "vue-cli-service build --mode cloud",
     "lint": "vue-cli-service lint",
     "i18n:report": "vue-cli-service i18n:report --src './src/**/*.?(js|vue)' --locales './src/locales/**/*.json'",
     "now-start": "vue-cli-service serve",
