--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 VUE_APP_I18N_LOCALE=en
 VUE_APP_I18N_FALLBACK_LOCALE=en
-VUE_APP_BASE_URL=https://devsm.cornflow.baobabsoluciones.app
+VUE_APP_BASE_URL=http://localhost:5000
