--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "private": true,
   "scripts": {
     "dev": "vue-cli-service serve --open",
-    "cloud": "vue-cli-service serve --mode cloud --host 0.0.0.0",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
+    "build:cloud": "vue-cli-service build --mode cloud",
     "lint": "vue-cli-service lint",
     "i18n:report": "vue-cli-service i18n:report --src './src/**/*.?(js|vue)' --locales './src/locales/**/*.json'",
     "now-start": "vue-cli-service serve",
@@ -21,6 +21,7 @@
     "core-js": "^3.6.2",
     "d3": "^6.3.1",
     "downloadjs": "^1.4.7",
+    "env-cmd": "^10.1.0",
     "material-design-icons-iconfont": "^6.1.0",
     "moment": "^2.24.0",
     "portal-vue": "^2.1.7",
